--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -210,6 +210,8 @@ The Integration Authority Area and Health Board tabs include a chart and table s
 
 The Trend tab shows the trend of the rate by financial year for Scotland and the selected geographical area for each age group. The table below the chart shows the rates for the selected geographical area.
 
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
+
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
 Row {.tabset data-height=1180}
@@ -548,7 +550,7 @@ The Integration Authority Area and Health Board tabs include a chart and table s
 
 The Trend tab shows the trend of the percentage of referrals that have received one year’s support by financial year for Scotland and the selected geographical area for each age group. The table below the chart shows the figures for the selected geographical area. 
 
-*As PDS for some referrals in `r provisional_year` onwards is still ongoing, it is not known yet whether or not they will meet the LDP standard. Therefore, the figures shown for these years are currently provisional and subject to change in future versions of this report.*
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste("LDP Standard performance figures are not provided until data is available for the full financial year."))}`
 `r if(qt != 4) {HTML("<br>")}`
@@ -845,6 +847,8 @@ The Integration Authority Area and Health Board tabs include a chart and table s
 
 The Trend tab shows the trend of the rate by financial year for Scotland and the selected geographical area for each gender. The table below the chart shows the rates for the selected geographical area. 
 
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
+
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
 
@@ -1137,7 +1141,7 @@ The Integration Authority Area and Health Board tabs include a chart and table s
 
 The Trend tab shows the trend of the percentage of referrals that have received one year’s support by financial year for Scotland and the selected geographical area for each gender. The table below the chart shows the figures for the selected geographical area. 
 
-*As PDS for some referrals in `r provisional_year` onwards is still ongoing, it is not known yet whether or not they will meet the LDP standard. Therefore, the figures shown for these years are currently provisional and subject to change in future versions of this report.*
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste("LDP Standard performance figures are not provided until data is available for the full financial year."))}`
 `r if(qt != 4) {HTML("<br>")}`
@@ -1422,6 +1426,8 @@ This page includes rates of the number of people referred to PDS per 10,000 popu
 The Integration Authority Area and Health Board tabs include a chart and table showing the rates for each geographical area for the selected financial year. For the Integration Authority tab use the dropdown menu to select areas to show in the charts and tables. 
 
 The Trend tab shows the trend of the rate by financial year for Scotland and the selected geographical area for each quintile. The table below the chart shows the rates for the selected geographical area. 
+
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
@@ -1788,7 +1794,7 @@ The Integration Authority Area and Health Board tabs include a chart and table s
 
 The Trend tabs include a chart showing the trend of the percentage by financial year for the selected geographical area for each deprivation quintile. The table below the charts shows the figures for the selected geographical area. 
 
-*As PDS for some referrals in `r provisional_year` onwards is still ongoing, it is not known yet whether or not they will meet the LDP standard. Therefore, the figures shown for these years are currently provisional and subject to change in future versions of this report.*
+*The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste("LDP Standard performance figures are not provided until data is available for the full financial year."))}`
 `r if(qt != 4) {HTML("<br>")}`
